[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"

[[bin]]
path = "src/day_01.rs"
name = "day_01"


[[bin]]
path = "src/day_02.rs"
name = "day_02"


[[bin]]
path = "src/day_03.rs"
name = "day_03"


[[bin]]
path = "src/day_05.rs"
name = "day_05"

[[bin]]
name = "day_06"
path = "src/day_06.rs"