[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.9"
rayon = "1.11.0"
rustc-hash = "2.1.1"

[profile.release]
opt-level = 3
lto = "fat"

[[bin]]
path = "src/day_01.rs"
name = "day_01"


[[bin]]
path = "src/day_02.rs"
name = "day_02"


[[bin]]
path = "src/day_03.rs"
name = "day_03"


[[bin]]
path = "src/day_05.rs"
name = "day_05"

[[bin]]
name = "day_06"
path = "src/day_06.rs"

[[bin]]
name = "day_07"
path = "src/day_07.rs"

[[bin]]
name = "day_10"
path = "src/day_10.rs"
